Applications/nginx-test/ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik-external
  name: nginx-service
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`test.lab.markaplay.net`)
      services:
        - name: nginx
          port: 80
  tls:
    secretName: test-tls
